refactor(api): openapi gen
