# src/app/api/models/enum/index.ts
@@ -4,3 +4,5 @@ export * from './transaction-type.enum';
 export * from './category-type.enum';
 export * from './country.enum';
 export * from './subscription-frequency.enum';
+export * from './day-of-week.enum';
+export * from './month-of-year.enum';
